syntax = "proto3";

package org.project_planton.provider.azure.azurekeyvault.v1;

import "org/project_planton/provider/azure/azurekeyvault/v1/api.proto";
import "org/project_planton/provider/azure/provider.proto";

//azure-key-vault stack-input
message AzureKeyVaultStackInput {
  //target cloud-resource
  AzureKeyVault target = 1;
  //provider-config
  org.project_planton.provider.azure.AzureProviderConfig provider_config = 2;
}
