syntax = "proto3";

package org.project_planton.provider.azure.azurekeyvault.v1;

// **AzureKeyVaultStackOutputs** captures the outputs of provisioning an Azure Key Vault.
// These outputs provide essential information for applications to connect to and use the vault.
message AzureKeyVaultStackOutputs {
  // The Azure Resource Manager ID of the Key Vault.
  // Format: /subscriptions/{subscription-id}/resourceGroups/{resource-group}/providers/Microsoft.KeyVault/vaults/{vault-name}
  string vault_id = 1;

  // The name of the Key Vault.
  string vault_name = 2;

  // The URI of the Key Vault.
  // Format: https://{vault-name}.vault.azure.net/
  // Applications use this URI to access secrets, keys, and certificates.
  string vault_uri = 3;

  // Map containing secret names and their corresponding secret IDs.
  // Key: secret name, Value: full secret ID (https://{vault}.vault.azure.net/secrets/{name})
  // Note: This map only contains secret IDs for secrets created by this stack.
  // The actual secret values are NOT included (they must be set separately).
  map<string, string> secret_id_map = 4;

  // The Azure region where the Key Vault was deployed.
  string region = 5;

  // The resource group name where the Key Vault was created.
  string resource_group = 6;
}
